policies/components/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
metadata:
  name: values
namespaceSelector:
  - name: mas-dev-core
    labels:
      ibm.com/kyverno: "true"
